--- a/workflow/notebooks/AMR_notebook.ipynb
+++ b/workflow/notebooks/AMR_notebook.ipynb
@@ -79,10 +79,10 @@
    "outputs": [],
    "source": [
     "# try snakefile for 1\n",
-    "srun --account=ctbrowngrp -p med2 -J sketch -t 3:00:00 -c 24 --mem=60gb --pty bash\n",
+    "srun --account=ctbrowngrp -p med2 -J rgi -t 12:00:00 -c 30 --mem=100gb --pty bash\n",
     "\n",
-    "snakemake --use-conda --resources mem_mb=60000 --rerun-triggers mtime \\\n",
-    "-c 24 --rerun-incomplete -k -n\n"
+    "snakemake --use-conda --resources mem_mb=100000 --rerun-triggers mtime \\\n",
+    "-c 30 --rerun-incomplete -k -n\n"
    ]
   }
  ],
