--- a/workflow/notebooks/AMR_notebook.ipynb
+++ b/workflow/notebooks/AMR_notebook.ipynb
@@ -36,6 +36,24 @@
    },
    "outputs": [],
    "source": [
+    "# RGI itself only uses the protein homolog model, not all others. Unless specified. \n",
+    "# Make zip file with only homolog\n",
+    "sourmash sketch dna \\\n",
+    "nucleotide_fasta_protein_homolog_model.fasta \\\n",
+    "--singleton -p k=18,k=21,k=31,k=51,scaled=100 \\\n",
+    "-o ../CARD_smash/card_protein_homolog_model.nucleotide.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# concat all nucleotide card into one fasta file\n",
     "cat nucleotide_fasta*.fasta > nucleotide_card.fasta\n",
     "\n",
@@ -79,9 +97,9 @@
    "outputs": [],
    "source": [
     "# try snakefile for 1\n",
-    "srun --account=ctbrowngrp -p med2 -J rgi -t 12:00:00 -c 30 --mem=100gb --pty bash\n",
+    "srun --account=ctbrowngrp -p med2 -J rgi -t 2:00:00 -c 30 --mem=50gb --pty bash\n",
     "\n",
-    "snakemake --use-conda --resources mem_mb=100000 --rerun-triggers mtime \\\n",
+    "snakemake --use-conda --resources mem_mb=50000 --rerun-triggers mtime \\\n",
     "-c 30 --rerun-incomplete -k -n\n"
    ]
   }
