add compare w diff mappers

--- a/workflow/notebooks/AMR_notebook.ipynb
+++ b/workflow/notebooks/AMR_notebook.ipynb
@@ -7,9 +7,50 @@
     "## Comparing Sourmash to RGI for recovering resistance genes\n",
     "RGI is the current tool used for identifying antimicrobial resistance genes. Relies on read mapping and is mem intensive and slow. Can we get an equally ok result using sourmash instead? Would like for it to work at a scale of 100, or larger. \n",
     "\n",
-    "For now, I am just comparing raw read rgi (rgi-bwt) to sourmash on the sketched raw reads. \n",
-    "And using 5 metagenomes"
+    "For now, I am just comparing raw read rgi (rgi-bwt) to sourmash on the sketched raw reads, for 1 metag\n",
+    "Will try sourmash with just k21 and with skipmers (skipm2n3, k=24).\n",
+    "Will try RGI with all 3 aligners (KMA, bowtie2, bwa)\n",
+    "\n",
+    "They will likely find different things and similar thigns. After this, should create a fasta file of everything found by any of these methods and do it again but just on this subset of contigs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# skipmer sketch\n",
+    "sourmash scripts manysketch \\\n",
+    "SRR5240728.csv -p skipm2n3,k=24,scaled=100,abund \\\n",
+    "-o SRR5240728.skipmer.zip --singleton"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
