add RGI for genomes

--- a/workflow/notebooks/AMR_notebook.ipynb
+++ b/workflow/notebooks/AMR_notebook.ipynb
@@ -15,19 +15,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
    "source": [
-    "# skipmer sketch\n",
-    "sourmash scripts manysketch \\\n",
-    "SRR5240728.csv -p skipm2n3,k=24,scaled=100,abund \\\n",
-    "-o SRR5240728.skipmer.zip --singleton"
+    "## Can we estimate the % of reads that is AMR using sourmash?\n",
+    "- Would be using a s of 1000, just to get a percentage\n",
+    "- Compare to % of reads mapped by RGI\n"
    ]
   },
   {
@@ -39,7 +36,29 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Do manysearch\n",
+    "# make one sketch of all AMR genes together\n",
+    "mamba activate branchwater-skipmer\n",
+    "# sketch into one merged sketch\n",
+    "sourmash sketch dna \\\n",
+    "nucleotide_fasta_protein_homolog_model.fasta \\\n",
+    "-p k=21,scaled=100,k=31,scaled=100 --name card_prot_homolog \\\n",
+    "-o ../CARD_smash/card_protein_homolog.merge.nucleotide.zip\n",
+    "\n",
+    "# manysearch against the 5 metaGs\n",
+    "srun --account=ctbrowngrp -p med2 -J manysearch -t 1:00:00 -c 40 --mem=70gb --pty bash\n",
+    "mamba activate branchwater-skipmer\n",
+    "\n",
+    "# after anbund sketch compare manusearch R1 v R2\n",
+    "sourmash scripts manysearch -c 40 \\\n",
+    "../../../resources/database/CARD_smash/card_protein_homolog.merge.nucleotide.zip \\\n",
+    "fp.txt -o amrfrac.k21s100.reads.csv -k 21 -s 100\n",
+    "\n",
+    "sourmash scripts fastmultigather -c 32 \\\n",
+    "../../../resources/database/CARD_smash/card_protein_homolog.merge.nucleotide.zip \\\n",
+    "fp.txt -o amrfrac.k21s100.fmg.csv -k 21 -s 100 -t 0"
+   ]
   },
   {
    "cell_type": "code",
@@ -50,7 +69,29 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# skipmer sketch\n",
+    "sourmash scripts manysketch \\\n",
+    "fp.txt -p skipm2n3,k=24,scaled=100,abund \\\n",
+    "-o SRR5240728.skipmer.zip "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Use the snakefile to compare\n",
+    "srun --account=ctbrowngrp -p bmh -J rgi -t 4:00:00 -c 45 --mem=100gb --pty bash\n",
+    "\n",
+    "snakemake -s snake_compare.smk --use-conda --resources mem_mb=50000 --rerun-triggers mtime \\\n",
+    "-c 32 --rerun-incomplete -k -n"
+   ]
   },
   {
    "cell_type": "code",
@@ -138,10 +179,11 @@
    "outputs": [],
    "source": [
     "# try snakefile for 1\n",
-    "srun --account=ctbrowngrp -p med2 -J rgi -t 2:00:00 -c 30 --mem=50gb --pty bash\n",
+    "srun --account=ctbrowngrp -p med2 -J rgi -t 1:00:00 -c 30 --mem=50gb --pty bash\n",
     "\n",
+    "mamba activate branchwater-skipmer\n",
     "snakemake --use-conda --resources mem_mb=50000 --rerun-triggers mtime \\\n",
-    "-c 30 --rerun-incomplete -k -n\n"
+    "-c 32 --rerun-incomplete -k -n\n"
    ]
   }
  ],
